--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -9,3 +9,5 @@ jobs:
           echo $token
         env: 
           token: ${{ secrets.secret_token }}
+          run: |
+            python today_append.py
