--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -1,13 +1,23 @@
 name: Secrets example
 on: push
+env:
+  token: ${{ secrets.secret_token }}
+
 jobs:
-  job1:
+  run-python:
     runs-on: ubuntu-latest
     steps:
-      - name: Test
+      - name: Setup Python
+        uses: actions\setup-python
+        with:
+          python-version: '3.11'
+      - name: Run Python Script
         run: |
-          echo $token
-        env: 
-          token: ${{ secrets.secret_token }}
-          run: |
-            python today_append.py
+          python -m pip install requests
+          python -m pip install json
+          python -m pip install pandas
+          python -m pip install datetime
+          python today_append.py
+
+
+
