--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -7,6 +7,7 @@ jobs:
   run-python:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Run Python Script
         run: |
           python -m pip install requests
