--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -11,4 +11,6 @@ jobs:
       - name: Run Python Script
         run: |
           python -m pip install requests
+          python -m pip install python-dateutil
+          python -m pip install pandas
           python today_append.py
