--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run Python Script
         run: |
-          python -m pip install requests
-          python -m pip install python-dateutil
-          python -m pip install pandas
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           python today_append.py
+          python read_json.py
