--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -11,6 +11,6 @@ jobs:
       - name: Run Python Script
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install requirements.txt
           python today_append.py
           python read_json.py
