--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -11,6 +11,12 @@ jobs:
       - name: Run Python Script
         run: |
           python -m pip install --upgrade pip
-          pip install requirements.txt
+          pip install requests
+          pip install pandas
+          pip install python-dateutil
+          pip install datetime
+          pip install openpyxl
+          pip install numpy
+          pip install Path
           python today_append.py
           python read_json.py
