Add design file

--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -18,5 +18,4 @@ jobs:
           pip install openpyxl
           pip install numpy
           pip install Path
-          python today_append.py
-          python read_json.py
+          python readjson.py
